# ProGenrtr

./: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
docs/: Doxyfile
src/: Config.py  ConfigManager.py  ProGenrtr  ProjectGenerator.py  ProjectTypesList.py  USAGE.py  utils.py
templates/: fallback.ini
test/: ConfigManager_test.py  DataStruct_test.py  testUtils.py
test/resources/: fallback.ini
