[project]
name        = "ProGenrtr"
version     = "0.2.0"
description = "A Project Generator based on template projects"

[build-system]
requires        = ["setuptools >= 61.0.0"]
build-backend   = ["setuptools.build_meta"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
